--- a/GE.WebCoreExtantions/GE.WebCoreExtantions.csproj
+++ b/GE.WebCoreExtantions/GE.WebCoreExtantions.csproj
@@ -56,6 +56,10 @@
   <ItemGroup>
     <Compile Include="Abstract\IHasGame.cs" />
     <Compile Include="ArticleType.cs" />
+    <Compile Include="Migrations\201602251610381_1.cs" />
+    <Compile Include="Migrations\201602251610381_1.Designer.cs">
+      <DependentUpon>201602251610381_1.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="News.cs" />
     <Compile Include="Article.cs" />
@@ -84,6 +88,11 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Migrations\201602251610381_1.resx">
+      <DependentUpon>201602251610381_1.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
