--- a/GE.WebUI/GE.WebUI.csproj
+++ b/GE.WebUI/GE.WebUI.csproj
@@ -405,6 +405,7 @@
     <Content Include="Content\less\last-news-block.less" />
     <Content Include="Content\less\positioned.less" />
     <Content Include="Content\less\for-gamers-block.less" />
+    <Content Include="Content\less\footer.less" />
     <None Include="Properties\PublishProfiles\game-exe.pubxml" />
     <None Include="T4MVC.tt.hooks.t4" />
     <None Include="T4MVC.tt">
@@ -448,7 +449,6 @@
     <Compile Include="Models\VMGameMenu .cs" />
     <Compile Include="Models\VMLastNewsBlock.cs" />
     <Compile Include="Models\VMMenu.cs" />
-    <Compile Include="Models\VMMenuItem.cs" />
     <Compile Include="Models\VMPreviewArticle.cs" />
     <Compile Include="Models\VMPreviewInfo.cs" />
     <Compile Include="NewsController.generated.cs">
@@ -489,9 +489,10 @@
     <Content Include="Views\Menues\_MenuItems.cshtml" />
     <Content Include="Views\Games\_GameList.cshtml" />
     <Content Include="Views\News\LastNewsBlock.cshtml" />
-    <Content Include="Views\Articles\ForGamersBlock.cshtml" />
+    <Content Include="Views\Articles\_ForGamersBlock.cshtml" />
     <Content Include="Views\Articles\_Preview.cshtml" />
     <Content Include="Views\Shared\DisplayTemplates\VMPreviewInfo.cshtml" />
+    <Content Include="Views\Shared\_Footer.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
